@@ -26,7 +26,12 @@ body { margin: 0; font-size: 1em; line-height: 1.4; }
     ::selection { background: #fe57a1; color: #fff; text-shadow: none; }
 */
 ::-moz-selection{ text-shadow: none; opacity: 0;}
-::selection { text-shadow: none; opacity: 0;}
+::selection {
+    text-shadow: none;
+    opacity: 0;
+    background-color:white; /* opera */
+}
+
 
 /* =============================================================================
    Links
